--- a/src/Raven.Studio/wwwroot/Content/css/pages/query.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/query.less
@@ -138,6 +138,10 @@
     }
 }
 
+.query-results-container {
+    min-height: 500px;
+}
+
 .query-results {
     border: 1px solid @gray-darker;
     /*
