--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -2,12 +2,12 @@
     <div class="panel">
         <div class="panel-body">
             <form class="flex-form" data-bind="submit: nextStep">
-                <h3>Import documents from existing SQL database</h3>
+                <h3>Import documents from a SQL database into the current RavenDB database</h3>
                 <div class="row">
                     <div class="col-sm-8 col-lg-6 margin-top" data-bind="with: model">
                         <div class="form-group">
                             <div>
-                                <label class="control-label">Database driver</label>
+                                <label class="control-label">SQL database driver</label>
                             </div>
                             <div class="flex-grow">
                                 <button class="btn btn-block dropdown-toggle text-left" data-toggle="dropdown">
@@ -22,62 +22,61 @@
                                 <span class="help-block" data-bind="validationMessage: databaseType"></span>
                             </div>
                         </div>
-                        <div data-bind="visible: databaseType() === 'MsSQL'">
+                        <div data-bind="visible: databaseType() === 'MsSQL', with: sqlServer">
                             <div class="form-group"
-                                 data-bind="validationElement: sqlServer.connectionString, with: sqlServer">
-                                <label class="control-label">Connection string</label>
+                                 data-bind="validationElement: connectionString">
+                                <label class="control-label">Connection string<i class="required"></i></label>
                                 <div class="flex-grow">
                                     <textarea class="form-control"
                                               data-bind="textInput: connectionString" rows="3"
                                               title="The connection string for the SQL server"
-                                              placeholder="Enter the complete connection string for the SQL server"></textarea>
+                                              placeholder="Enter the complete connection string for the SQL server">                                        
+                                    </textarea>
                                     <div>
                                         <small>
                                             <i class="icon-info"></i>
-                                            Please provide 'Database name' in field below, instead of using <code>Initial Catalog</code> option. 
+                                            Please provide 'Database name' in the field below, instead of using <code>Initial Catalog</code> option. 
                                         </small>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div data-bind="visible: databaseType() === 'MySQL'">
-                            <div class="form-group" data-bind="validationElement: mySql.server">
-                                <label class="control-label">Server</label>
+                        <div data-bind="visible: databaseType() === 'MySQL', with: mySql">
+                            <div class="form-group" data-bind="validationElement: server">
+                                <label class="control-label">Server location<i class="required"></i></label>
                                 <div class="flex-grow">
                                     <input class="form-control"
-                                           data-bind="textInput: mySql.server"
+                                           data-bind="textInput: server"
                                            placeholder="Server location">
                                 </div>
                             </div>
-                            <div class="form-group" data-bind="validationElement: mySql.username">
-                                <label class="control-label">Username</label>
+                            <div class="form-group" data-bind="validationElement: username,">
+                                <label class="control-label">Username<i class="required"></i></label>
                                 <div class="flex-grow">
                                     <input class="form-control"
-                                           data-bind="textInput: mySql.username"
+                                           data-bind="textInput: username"
                                            placeholder="Username">
                                 </div>
                             </div>
-                            <div class="form-group" data-bind="validationElement: mySql.password">
+                            <div class="form-group" data-bind="validationElement: password">
                                 <label class="control-label">Password</label>
                                 <div class="flex-grow">
                                     <input type="password" class="form-control"
-                                           data-bind="textInput: mySql.password"
+                                           data-bind="textInput: password"
                                            placeholder="Password">
                                 </div>
                             </div>
                         </div>
-
                         <div class="form-group" data-bind="validationElement: sourceDatabaseName">
-                            <label class="control-label">Database name</label>
+                            <label class="control-label">SQL Database name<i class="required"></i></label>
                             <div class="flex-grow">
                                 <input class="form-control"
                                        data-bind="textInput: sourceDatabaseName"
-                                       placeholder="Database name">
+                                       placeholder="Enter the SQL Database name">
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <hr/>
                 <div class="alert alert-warning">
                     If user goes back to this view offer an option to continue previous setup
@@ -92,11 +91,8 @@
                     </div>
                 </div>
             </form>
-            
-            
             <div data-bind="foreach: model.tables">
                 <h3 data-bind="text: name"></h3>
-                
                 <ul data-bind="foreach: columns">
                     <li data-bind="text: name + ' (' + type + ')'"></li>
                 </ul>
