--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -1863,3 +1863,4 @@ ul.properties {
 @import "pages/license.less";
 @import "pages/cmp-xchg.less";
 @import "pages/eula.less";
+@import "pages/sql-migration.less";
